--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: yumi <yumi@student.42.fr>                  +#+  +:+       +#+         #
+#    By: yu-chen <yu-chen@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/07/24 14:27:08 by yumi              #+#    #+#              #
-#    Updated: 2024/07/24 14:37:54 by yumi             ###   ########.fr        #
+#    Created: 2024/07/24 15:59:23 by yu-chen           #+#    #+#              #
+#    Updated: 2024/07/24 16:01:24 by yu-chen          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
